# nexum

./: Cargo.toml  README.md
docs/: plan.md
examples/dioxus-basic/: Cargo.toml
examples/dioxus-basic/src/: main.rs
examples/floem-basic/: Cargo.toml
examples/floem-basic/src/: main.rs
examples/gpui-basic/: Cargo.toml
examples/gpui-basic/src/: main.rs
examples/xilem-basic/: Cargo.toml
examples/xilem-basic/src/: main.rs
nexum-core/: Cargo.toml
nexum-core/src/: config.rs  error.rs  lib.rs
nexum-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
nexum-dioxus/: Cargo.toml
nexum-dioxus/src/: lib.rs
nexum-floem/: Cargo.toml
nexum-floem/src/: lib.rs
nexum-gpui/: Cargo.toml
nexum-gpui/src/: lib.rs
nexum-platform/: Cargo.toml
nexum-platform/src/: lib.rs
nexum-xilem/: Cargo.toml
nexum-xilem/src/: lib.rs
