[package]
name = "nexum-core"
version = "0.1.0"
edition = "2024"
description = "Framework-agnostic deep linking for Rust"
license = "MIT OR Apache-2.0"

[dependencies]
url = "2.5"
async-channel = "2.5"
thiserror = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
rust-ini = "0.21"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
