[package]
name = "nexum-dioxus"
version = "0.1.0"
edition = "2021"
description = "Dioxus adapter for nexum deep linking"
license = "MIT OR Apache-2.0"

[dependencies]
nexum-core = { path = "../nexum-core", version = "0.1.0" }
nexum-platform = { path = "../nexum-platform" }
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-signals = "0.6"
crossbeam-channel = "0.5"
