[package]
name = "nexum-dioxus"
version = "0.1.0"
edition = "2021"
description = "Dioxus adapter for nexum deep linking"
license = "MIT OR Apache-2.0"

[dependencies]
nexum-core = { path = "../nexum-core", version = "0.1.0" }
nexum-platform = { path = "../nexum-platform" }
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-desktop = { version = "0.7" }
tao = "0.34"
dioxus-hooks = "0.7"
async-channel = "2.5"
