[package]
name = "nexum-floem"
version = "0.1.0"
edition = "2021"
description = "Floem adapter for nexum deep linking"
license = "MIT OR Apache-2.0"

[dependencies]
nexum-core = { path = "../nexum-core", version = "0.1.0" }
nexum-platform = { path = "../nexum-platform" }
floem = { version = "0.2", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
async-channel = "2.5"
once_cell = "1.20"
url = "2.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
rust-ini = "0.21"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

[features]
default = []
signal = ["dep:floem", "dep:crossbeam-channel"]
