[package]
name = "nexum-gpui"
version = "0.1.0"
edition = "2021"

[dependencies]
nexum-core = { path = "../nexum-core", version = "0.1.0" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui = { git = "https://github.com/zed-industries/zed" }
async-channel = "2.3"
url = "2.5"
