[package]
name = "nexum-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
nexum-core = { path = "../nexum-core" }
once_cell = "1.20"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6"}
objc2-foundation = { version = "0.3", features = ["NSAppleEventManager", "NSAppleEventDescriptor", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = "0.5"
