[package]
name = "xilem-basic"
version = "0.1.0"
edition = "2024"
description = "Nexum Xilem Deep Link Example"

[dependencies]
nexum-xilem = { path = "../../nexum-xilem" }
nexum-core = { path = "../../nexum-core" }
xilem = "0.4"
async-channel = "2.5"
winit = "0.30.13"
tokio = { version = "1", features = ["rt", "time"] }
masonry = "0.4.0"
masonry_winit = "0.4.0"
[package.metadata.bundle]
name = "Nexum Xilem Example"
identifier = "com.nexum.xilem-basic"
icon = ["icon.png"]
version = "0.1.0"
copyright = "MIT"
category = "public.app-category.developer-tools"
short_description = "Nexum Xilem Deep Link Example"
long_description = "Example application for Nexum deep linking in Xilem."
osx_url_schemes = ["xilem"]
